   - Configured interface specific MaxBW values were getting overridden by
     BandwidthDetection when something could be detected
   - Image output horizontal rx/tx bars often had one pixel too much width in
     the tx section resulting in slightly wrong ratio to be shown
   - Top days list wasn't always sorting entries with exactly the same traffic
     sum using ascending date
 - New
   - Add the possibility of specifying an interface without using the
     -i / --iface options (vnstat and vnstati)
   - Add configuration option UseUTC for using UTC as timezone for database
     entries instead of following the system timezone configuration
   - --iflist uses user configured interface specific MaxBW values in the
     output when available instead of showing only the kernel provided
     information when detected
   - Add configuration option AlwaysAddNewInterfaces to expose the daemon
     --alwaysadd command line option which gains an optional mode parameter
   - The daemon can discover added interfaces from the database without
     requiring a restart, configurable with option RescanDatabaseOnSave
   - Image output uses LibGD filled arc bug workaround only for LibGD
     versions that are known to be broken
   - Image output example cgi (examples/vnstat.cgi) improvements
     - Automatically lists all monitored interfaces instead of requiring the
       list to be filled manually, server name in page title comes from
       hostname command
     - Provides links for most available images to more detailed or longer
       versions of each image
     - Allows direct interface specific page access with /interfacename suffix
       for the cgi if the used httpd supports PATH_INFO
     - Has page auto refresh configurable


2.7 / 16-May-2021

 - Fixed
   - Possibility of segmentation fault with image list output when database
     existed but no data was available
   - ./configure output could show invalid install paths with some parameter